updated readme and notebook scripts with enviornment data paths

--- a/plots/multi-conlinearity.ipynb
+++ b/plots/multi-conlinearity.ipynb
@@ -13,7 +13,16 @@
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "import os\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt "
+    "import matplotlib.pyplot as plt \n",
+    "from decouple import config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1909116c",
+   "metadata": {},
+   "source": [
+    "Get enviornmental variables and change to data folder"
    ]
   },
   {
@@ -23,7 +32,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir() # Change this to your file path"
+    "data = config('data')\n",
+    "os.chdir(data) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2904e25",
+   "metadata": {},
+   "source": [
+    "load the eres.mgh file and the behavioural results csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "855ed582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = nb.load('eres.mgh')\n",
+    "df = pd.read_csv('behavioural_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40fa5d9d",
+   "metadata": {},
+   "source": [
+    "Extract the data from the eres.mgh and create dataframe"
    ]
   },
   {
@@ -33,27 +70,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = nb.load('eres.mgh')\n",
-    "\n",
-    "df = pd.read_csv('behavioural_results.csv')\n",
-    "\n",
     "data = img.get_fdata()\n",
-    "\n",
     "voxel_data = data[10000].flatten()\n",
-    "\n",
     "voxel_data = np.array(voxel_data,dtype=float) \n",
-    "\n",
-    "voxel_df = pd.DataFrame(voxel_data)\n",
-    "\n",
+    "voxel_df = pd.DataFrame(voxel_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee2f28b3",
+   "metadata": {},
+   "source": [
+    "Build a dataframe to create the correlation matricies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1df635e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = pd.concat([df[['G-Number','age_adjusted_group','Age']],voxel_df],axis=1).rename(columns={0:'voxel'})\n",
-    "\n",
     "groups = pd.get_dummies(model['age_adjusted_group'])\n",
-    "\n",
     "model = pd.concat([model,groups],axis=1)\n",
-    "\n",
     "X_age = model[['voxel','AAN','HC','WR','Age']]  \n",
-    "\n",
     "X_minage = model[['voxel','AAN','HC','WR']] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9b4cf2",
+   "metadata": {},
+   "source": [
+    "Plot heatmaps"
    ]
   },
   {
