--- a/plots/plotting_measures.ipynb
+++ b/plots/plotting_measures.ipynb
@@ -10,6 +10,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from decouple import config\n",
     "import seaborn as sns\n",
     "sns.set(font_scale=1)"
    ]
@@ -21,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir() #Change this to your file path"
+    "data = config('data')\n",
+    "os.chdir(data) "
    ]
   },
   {
